--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://j56y.com; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src * data:; connect-src https://j56y.com; frame-src 'none';",
+          "value": "default-src 'self' https://p78t.com; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src * data:; connect-src https://p78t.com; frame-src 'none';",
           "override": true
         },
         {
