--- a/vercel.json
+++ b/vercel.json
@@ -4,30 +4,35 @@
       "source": "/(.*)",
       "headers": [
         {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://p78t.com; script-src 'self' 'unsafe-inline' https://*.vercel.app; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://p78t.com; connect-src 'self' https://p78t.com; frame-src 'none';",
-          "override": true
-        },
-        {
           "key": "Strict-Transport-Security",
-          "value": "max-age=31536000",  // 暂不启用 includeSubDomains 和 preload
-          "override": true
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "geolocation=(), microphone=(), camera=(), payment=()",
-          "override": true
+          "value": "max-age=31536000; preload"
         },
         {
           "key": "X-Frame-Options",
-          "value": "DENY",
-          "override": true
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self' https://p78t.com; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://p78t.com;"
         }
       ]
     }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+  "redirects": [
+    {
+      "source": "/:path*",
+      "destination": "https://good.queenmeet.vip/:path*",
+      "permanent": true,
+      "has": [
+        {
+          "type": "host",
+          "value": "good.queenmeet.vip"
+        }
+      ]
+    }
   ]
 }
