--- a/vercel.json
+++ b/vercel.json
@@ -6,31 +6,27 @@
       "headers": [
         {
           "key": "Strict-Transport-Security",
-          "value": "max-age=63072000; includeSubDomains; preload"
-        },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://p78t.com https:; img-src https: data:; script-src 'self' 'unsafe-inline'"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
+          "value": "max-age=31536000; preload"
         },
         {
           "key": "X-Frame-Options",
           "value": "DENY"
         },
         {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self' https://p78t.com https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: https://p78t.com;"
         }
       ]
     }
   ],
   "redirects": [
     {
-      "source": "/",
-      "destination": "https://good.queenmeet.vip",
+      "source": "/:path*",
+      "destination": "https://good.queenmeet.vip/:path*",
       "permanent": true,
       "statusCode": 308
     }
