--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://p78t.com https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://p78t.com https:;"
+          "value": "default-src 'self' https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:;"
         },
         {
           "key": "X-Frame-Options",
@@ -27,7 +27,6 @@
     {
       "source": "/:path*",
       "destination": "https://good.queenmeet.vip/:path*",
-      "permanent": true,
       "statusCode": 308
     }
   ]
