--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,14 @@
     {
       "source": "/(.*)",
       "headers": [
+        // ========== 核心安全标头 ==========
         {
           "key": "Strict-Transport-Security",
           "value": "max-age=63072000; includeSubDomains; preload"
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:;"
+          "value": "default-src 'self' https://p78t.com https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: https://p78t.com;"
         },
         {
           "key": "X-Frame-Options",
@@ -19,15 +20,36 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+
+        // ========== 增强安全标头 ==========
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "geolocation=(), microphone=(), camera=()"
         }
       ]
     }
   ],
   "redirects": [
+    // ========== 全局HTTP到HTTPS重定向 ==========
     {
       "source": "/:path*",
       "destination": "https://good.queenmeet.vip/:path*",
       "statusCode": 308
+    }
+  ],
+  "routes": [
+    // ========== 缓存优化配置 ==========
+    {
+      "src": "/.*",
+      "dest": "/index.html",
+      "headers": {
+        "Cache-Control": "public, max-age=3600, s-maxage=86400"
+      }
     }
   ]
 }
